# wasmcat

./: Cargo.toml  README.md
cli/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/benches/: bench.rs
crates/parser/src/: decode.rs  error.rs  instruction.rs  lib.rs  module.rs  parser.rs  section.rs  types.rs
crates/runtime/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
