[package]
name = "wasmcat-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

leb128 = "0.2.5"
smol_str = "0.2.1"
wasmparser = "0.203.0"
smallvec = "1.13.2"

rayon = { version = "1.10", optional = true }
spin = { version = "0.9.8", optional = true }

[dev-dependencies]
wasm-smith = "0.203.0"
arbitrary = "1"
paste = "1.0"

[features]
parallel = ["dep:rayon", "dep:spin"]
