[package]
name = "wasmcat-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
smol_str.workspace = true
smallvec.workspace = true

leb128 = "0.2.5"
wasmparser = "0.203.0"

rayon = { workspace = true, optional = true }
spin = { workspace = true, optional = true }

[dev-dependencies]
wasm-smith = "0.203.0"
arbitrary = "1"
paste = "1.0"

[features]
parallel = ["dep:rayon", "dep:spin"]
